--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.ondamenu.ondamenu</string>
+	<string>com.example.odm_ui</string>
 	<key>PROJECT_ID</key>
 	<string>ondamenu-3dc99</string>
 	<key>STORAGE_BUCKET</key>
