--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = ondamenu
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.ondamenu.ondamenu
+PRODUCT_BUNDLE_IDENTIFIER = com.example.odm_ui
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.ondamenu. All rights reserved.
